src/test/deca/extension/context/valid/decl_assign_array2.deca
// Description:
// 	  Array's declaration and assigment
// Resultats:
//    ok
// Historique:
// 	  cree le 12/01/2023

{
    int a = 2;
    int b = 3;
    int c = 5;
    int[3] tab2 = {a, b, c};

    int[3][2][2] tab = {{{1, 2}, {3, 4}}, {{5, 6}, {7, 8}}, {{9, 10}, {11, 12}}};

    int[3] A = {2, 3, 5};
    int[3] B = {7, 11, 13};
    int[a][b] C = {A, B};
    int[1][2][3] D = {{A, B}};
    
    int[5][2] tab3;
    tab3 = {{1, 2}, {3, 4}, {5, 6}, {7, 8}, {9, 10}};
}