src/test/deca/extension/context/invalid/indexation_on_undefined_variable.deca
// Description:
// 	  Indexation on undefined variable
// Resultats:
// 	  UNDEFINED_VAR: Variable A is undefined
//    line 10
// Historique:
// 	  cree le /01/2023

{
    int[2] tab = {1, A[3]};
}